[project]
name = "aether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh==3.6.3",
    "cartopy==0.24.1",
    "certifi==2025.6.15",
    "cftime==1.6.4.post1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.4",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "narwhals==1.44.0",
    "netcdf4==1.7.2",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "pyproj==3.7.1",
    "pyshp==2.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "scipy==1.16.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "tornado==6.5.1",
    "tzdata==2025.2",
    "xarray==2025.6.1",
    "xyzservices==2025.4.0",
]
